build: lower compiled bytecode baseline from Java 11 to Java 8
Also silences obsolete-source/target compiler lint warnings, ignores
junit-jupiter-api/-params and junit-platform-commons as used-undeclared
dependencies (transitive via the junit-jupiter aggregator), fixes an
unused try-with-resources variable in OleBlobTest, and trims the noisy
stack trace logged for expected unknown-query-type parse failures in
QueryImpl.