@@ -164,7 +164,7 @@ public class Joiner {
      * @return {@code true} if any "to" rows were deleted, {@code false} otherwise
      */
     public boolean deleteRows(Map<String, ?> fromRow) {
-        return deleteRowsImpl(findRows(fromRow).withColumnNames(Set.of()).iterator());
+        return deleteRowsImpl(findRows(fromRow).withColumnNames(Collections.emptySet()).iterator());
     }
 
     /**
@@ -174,7 +174,7 @@ public class Joiner {
      * @return {@code true} if any "to" rows were deleted, {@code false} otherwise
      */
     public boolean deleteRows(Object[] fromRow) {
-        return deleteRowsImpl(findRows(fromRow).withColumnNames(Set.of()).iterator());
+        return deleteRowsImpl(findRows(fromRow).withColumnNames(Collections.emptySet()).iterator());
     }
 
     /**
