@@ -24,6 +24,7 @@ import io.github.spannm.jackcess.test.source.FileFormatSource;
 import org.junit.jupiter.params.ParameterizedTest;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 class ColumnFormatterTest extends AbstractBaseTest {
@@ -63,7 +64,7 @@ class ColumnFormatterTest extends AbstractBaseTest {
                 found.add(d3Fmt.getRowValue(r));
             }
 
-            assertThat(found).isEqualTo(List.of(
+            assertThat(found).isEqualTo(Arrays.asList(
                     "FOxxOBAR", "3.7E+1", "$0.03",
                     "37xx", "4.5E+3", "$4,500.00",
                     "FOxxOBARBAZ", "-3.7E+1", "($37.13)",
@@ -85,7 +86,7 @@ class ColumnFormatterTest extends AbstractBaseTest {
                 found.add(d3Fmt.getRowValue(r));
             }
 
-            assertThat(found).isEqualTo(List.of(
+            assertThat(found).isEqualTo(Arrays.asList(
                     "foobar", "37", "12:43:12 AM",
                     "3.70E+1", "4500", "4/26/1912",
                     "foobarbaz", "-37", "11/23/1899 3:07:12 AM",
